added comments for the main app components and code repulisti

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
 
     <string name="confirm">Conferma</string>
     <string name="dismiss">Annulla</string>
+    <string name="back">Indietro</string>
 
     <string name="notification_permission_title">Permesso per le notifiche push</string>
     <string name="notification_permission_rationale">Le notifiche push sono utilizzate per indicare quando un alimento inserito sta per scadere</string>
@@ -72,40 +73,13 @@
 
     <string name="logout">Logout</string>
 
-    //TF
+    //TensorFlow
 
-    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
+    <string name="camera_access">Hai fornito i permessi per la fotocamera.</string>
+    <string name="camera_denied">Accesso alla fotocamera negato. Vai nelle impostazioni del sistema per abilitare il permesso."</string>
 
-    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
-        button</string>
-    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
-        button</string>
-    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
-        results button</string>
-    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
-        results button</string>
-    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
-    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
+    <string name="label_interence_time">Tempo di inferenza</string>
 
-    <string name="label_interence_time">Inference Time</string>
-    <string name="label_fps">Frames per Second</string>
-    <string name="label_confidence_threshold">Threshold</string>
-    <string name="label_max_results">Max Results</string>
-    <string name="label_threads">Number of Threads</string>
-    <string name="label_delegate">Delegate</string>
-    <string name="label_models">ML Model</string>
-
-    <string-array name="delegate_spinner_titles">
-        <item>CPU</item>
-        <item>GPU</item>
-        <item>NNAPI</item>
-    </string-array>
-
-    <string-array name="models_spinner_titles">
-        <item>MobileNet V1</item>
-        <item>EfficientDet Lite0</item>
-        <item>EfficientDet Lite1</item>
-        <item>EfficientDet Lite2</item>
-    </string-array>
+    <string name="choose_object">Inquadra un contenitore</string>
 
 </resources>
