updated app colors - added empty field messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
 
     <string name="authenticating">Autenticazione...</string>
 
+    <string name="complete_fields">Inserisci tutti i dati per salvare</string>
+
     <string name="save_test_container">"Save test container"</string>
     <string name="save_test_item">"Save test item"</string>
     <string name="get_all_items">"Get all items"</string>
