--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="first_access">È il tuo primo accesso?</string>
     <string name="sign_up">Registrati</string>
     <string name="forgot_password">Hai dimenticato la password?</string>
-    <string name="error">È stato riscontrato un errore</string>
+    <string name="error">È stato riscontrato un errore.</string>
+    <string name="signup_error">È stato riscontrato un errore durante la registrazione. Verifica la connettività e riprova.</string>
     <string name="recovery_email">È stata inviata una mail per il reset della password all\'indirizzo indicato</string>
 
     <string name="error_in_splash_screen">È stato riscontrato un errore nell\'inizializzazione</string>
@@ -50,7 +51,7 @@
     <string name="blank_password">Il campo password non può essere vuoto</string>
     <string name="password_not_corresponding">Le due password non coincidono</string>
 
-    <string name="login_error">È stato riscontrato un errore durante il login.</string>
+    <string name="login_error">È stato riscontrato un errore durante il login. Verifica le credenziali e riprova.</string>
     <string name="account_creation">Registro l\'account...</string>
     <string name="account_created">Account creato correttamente</string>
 
